public/style.css
html {
  height: 100%;
  width: 100%;
}

body {
  background: #fff;
  box-sizing: border-box;
  color: #222;
  font: normal normal normal 1rem/1.65 'Roboto', 'Helvetica', sans-serif;
  height: 100%;
  margin: 0;
  padding: 0;
  text-rendering: optimizeLegibility;
}

.content-container {
  margin: 15px auto 40px auto;
  width: 60%;
}

.translated-content {
  display: none; /* hidden until translations load */
  padding-bottom: 70px; /* pad against bottom nav */
}

.heading-container {
  background: royalblue;
  color: white;
  padding: 30px 0 20px 0;
  text-align: center;
}

.heading-container a {
  color: white;
}

.logo {
  height: 120px;
  margin-bottom: 15px;
}

.fb-logo {
  height: 1em;
  margin-bottom: 4px;
}

h1 {
  font-weight: 800;
}

h2 {
  color: #333;
  font-size: 1.8rem;
  font-weight: 800;
  margin: 30px 0 20px 0;
  text-align: center;
  text-transform: capitalize;
}

hr {margin-top: 1.7rem;}

.footer {
  background: #eee;
  margin: 50px auto 0 auto;
  padding: 0 45px 90px 45px;
}

.member-of {
  font-style: italic;
  font-size: 13px;
  margin-bottom: 10px;

}

.subhead {
  margin: 20px auto 40px auto;
  display: flex;
  align-items: center;
  text-align: center;
  width: 55%;
  padding: 10px 20px;
  border-radius: 2px;
}

.subhead-left {
  border-right: 2px solid #ccc;
  font-size: 0.9rem;
  font-weight: light;
  letter-spacing: 3px;
  line-height: 1.8rem;
  text-align: right;
  text-transform: uppercase;
  width: calc(40% + 40px);
}

.subhead-right{
  font-size: 1rem;
  text-align: left;
  width: calc(60% + 40px);
}

.question {
  font-weight: bold;
}

.need-ppe {
  background: #fafafa;
  border: 1px solid #ccc;
  margin: 40px 0px;
  padding: 30px 50px;
  text-align: center;
}

.need-ppe h2 {
  margin-top: 0;
}

.ppe-example {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.ppe-example img {
  height: 200px;
  width: auto;
}

#masks-img {
  height: 210px;
}

#goggle-img {
  height: 140px;
}

#faceshield-img {
  height: 185px;
}

.ppe-example-caption {
  color: #444;
  font-size: 12px;
  font-weight: 300;
  letter-spacing: 1.1px;
  margin: 0.9rem 0 0.375rem 0;
  text-transform: uppercase;
}

.social-link {
  white-space: nowrap;
}

h2.state {
  background: #eee;
  color: #000;
  font: 800 24px 'Roboto';
  letter-spacing: 3px;
  margin: 0;
  padding: 4px 15px;
  text-align: left;
}

h3.city {
  color: #666;
  font-size: 20px;
  font-weight: 300;
  letter-spacing: 3px;
  margin: 0 0 0 15px;
  padding: 20px 0;
  text-transform: uppercase;
}

.locations-list h4 {
  font-size: 18px;
  font-weight: 600;
  padding-bottom: 5px;
  margin: 0px;
}

.locations-list p {
  font-size: 0.9rem;
  margin: 0px;
  line-height: 1.5;
}

.location {
  padding-bottom: 20px;
  overflow-wrap: break-word;
  margin-left: 15px;
}

.location label {
  color: #444;
  font-size: 12px;
  font-weight: 300;
  letter-spacing: 1.1px;
  margin: 0.9rem 0 0 0;
  text-transform: uppercase;
}

.donation-sites h1 {
  margin-bottom: -10px;
}

.filters-list div {
  display: inline-block;
  margin: 0 3px 3px 0;
}

.locations-list {
  padding: 0 30px 10px 30px;
  margin-top: 20px;
}

.filters-container {
  margin: 0 30px;
}

/* On the give page, filters and list take full width of their containers */
.give .filters-container {
  margin: 0;
}

.give .locations-list {
  padding: 0 0 10px 0;
}

.filters-list h4 {
  display: block;
  font-size: 18px;
  font-weight: 600;
  margin: 25px 0 20px 0;
}

.filters-list input {
  display: none;
}

.filters-list label {
  background: white;
  border-radius: 5px;
  border: 1px #ccc solid;
  cursor: pointer;
  font-size: 18px;
  min-width: 2.4em;
  padding: 0.3rem;
  text-align: center;
}

.filters-list label:hover {
  background:#7c9bf7;
  border-color: #7c9bf7;
  color: white;
}

.filters-list label.selected {
  background: royalblue;
  border-color: #c2d1ff;
  color: white;
}

.map-container {
  padding: 30px 0 5px 0;
}

#map {
  height: 400px;
  width: 100%;
}

#map .label {
  color: #999;
  font-size: 11px;
  font-weight: 400;
  padding: 6px 0 2px 0;
  text-transform: uppercase;
  width: 105px;
}

#map .value {
  font-weight: 400
}

#map-stats, #list-stats {
  color: #333;
  font-size: 22px;
  font-weight: 300;
  margin-left: 10px;
  padding-top: 1px;
  text-align: center;
}

.donation-map-title {
  align-items: center;
  display: flex;
  justify-content: center;
  text-align: center;
}
.donation-map-title h2 {
  display: inline;
  margin: 0;
  padding: 0;
}

.locations-loading {
  padding-top: 20px;
}

.load-spinner {
  animation: 5s load-spinner infinite linear;
  height: 21px;
  vertical-align: text-top;
  width: 21px;
}

@-webkit-keyframes load-spinner {
  100% {
    transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
  }
}

@-moz-keyframes load-spinner {
  100% {
    transform: rotate(360deg);
    -moz-transform: rotate(360deg);
  }
}

@-ms-keyframes load-spinner {
  100% {
    transform: rotate(360deg);
    -ms-transform: rotate(360deg);
  }
}

.secondarycluster {
  opacity: 0.4;
}

/*********************
  * MAP SEARCH STYLES *
  *********************/

/* What actually varies with breakpoints */
.map-search-wrap {
  display: flex;
  margin-top: 20px;
  position: relative;
  width: 100%;
}

.map-search-wrap:first-child {
  margin-top: 0;
}

.search-icon {
  height: 2.3rem; /* synchronized w/ input field for vertical centering, being an SVG it should not warp */
  left: 10px;
  opacity: 0.7;
  pointer-events: none; /* user clicks should fall through to input field instead */
  position: absolute;
  top: 1; /* ... see height below... */
  width: 17px;
}

#map-search {
  border: 1px solid #ccc;
  height: 2.3rem;
}

#map-search {
  outline-color: #000;
}

#map-search {
  border-radius: 3px;
  line-height: 2.3rem;
  margin-bottom: 5px;
  outline: none;
  padding: 0.4rem 0.8rem 0.4rem 35px;
  width: 100%;
}

.search-input {
  display: flex;
  margin: 0px 15px 0px 20px;
  position: relative;
  width: 100%;
  width:100%;
}

.search-controls {
  display: flex;
  padding-top: 7px;
}

.search-control-separator {
  padding: 0px 8px;
  color: #ccc;
  font-size: 14px;
}

.map-action-link {
  white-space: nowrap;
  font-size: 14px;
}

.map-action-link:hover {
  text-decoration: none;
}

.map-action-link img {
  padding-right: 5px;
  width: 21px;
  height: 21px;
}

.nav-drop-shadow {
  background-color: white;
  box-shadow: 0 -2px 15px rgba(0,0,0,0.09);
}
.nav-link {
  font-size: 0.9rem !important;
}
.navbar-nav {
  flex-direction: row;
}

.navbar-nav .nav-item {
  margin-left: 20px;
}
.dropdown-menu {
  position: absolute !important;
}

/* Mobile first: Desktop breakpoint overrides below */

@media (max-width: 1200px) {
  .search-input {
    margin: 0px;
    margin-right: 15px;
  }
  .map-search-wrap {
    padding-top: 4px;
  }
}

@media (max-width: 576px) {
  .map-search-wrap {
    display: block;
  }
  .search-controls {
    justify-content: center;
    padding-top: 5px;
  }
  h2.state {
    padding: 4px 10px;
  }
  h3.city,
  .location {
    margin-left: 10px;
  }
}

/*************************
  * END MAP SEARCH STYLES *
  *************************/

@media screen and (max-width: 768px) {
  .content-container {
    margin-left: 15px;
    margin-right: 15px;
    width: auto;
  }

  .logo {
    height: 100px;
  }

  .subhead {
    width: 100%;
    padding: 0;
    flex-direction: column;
  }
  .subhead-left {
    border: 0;
    width: 100%;
    padding: 0;
    margin-bottom: 10px;
    text-align: center;
  }
  .subhead-right {
    font-size: 0.9rem;
    width: 80%;
    text-align: center;
  }

  .filters-container {
    margin: 0 15px;
  }

  .locations-list {
    padding-left: 15px;
    padding-right: 15px;
  }

  .footer {
    padding-left: 20px;
    padding-right: 20px;
  }

  .nav-link {
    font-size: 0.7rem;
  }

  .need-ppe {
    margin-left: 0;
    margin-right: 0;
  }

  #masks-img {
    height: 160px;
  }

  .social-media {
    margin-top: 20px;
  }

  #goggle-img {
    height: 115px;
  }

  #faceshield-img {
    height: 150px;
  }
  .ppe-example-caption {
    margin-top: 4px;
    margin-bottom: 10px;
  }


}

